trunk/Archive2/cd/ec1e9db0026232/output
main.cpp: In function 'int main()':
main.cpp:7:16: error: lvalue required as left operand of assignment
     (long *) p = &l ;
                ^
