trunk/Archive2/cd/ec1e9db0026232/main.cpp
char *p;
short  i;
long l;

int main()
{
    (long *) p = &l ;
}